[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "flask>=3.1.1",
    "gspread>=6.2.1",
    "nest-asyncio>=1.6.0",
    "oauth2client>=4.1.3",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "telegram>=0.0.1",
]
